[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/power_ups/star_bronze.png" type="Texture" id=1]
[ext_resource path="res://nodes/manager_componets/node/ManagerComponetsNode.gd" type="Script" id=2]
[ext_resource path="res://members/collision_box/action_box/scene/action_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_objects/star/componets/improvement.gd" type="Script" id=4]
[ext_resource path="res://nodes/manager_object/node/ObjectManagerNode.gd" type="Script" id=5]
[ext_resource path="res://game_objects/star/beahaviour/script/star.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[node name="star" type="Node2D"]

[node name="texture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ObjectManager" type="Node" parent="."]
script = ExtResource( 5 )
objectProcess = NodePath("star")

[node name="star" type="Node" parent="ObjectManager"]
script = ExtResource( 6 )

[node name="ManagerComponets" type="Node" parent="."]
script = ExtResource( 2 )

[node name="improvement" type="Node" parent="ManagerComponets"]
script = ExtResource( 4 )

[node name="action_box" parent="." instance=ExtResource( 3 )]
action = "get_star"

[node name="CollisionShape2D" type="CollisionShape2D" parent="action_box"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[connection signal="MangerComponetsInitialize" from="ManagerComponets" to="ObjectManager/star" method="_on_ManagerComponets_MangerComponetsInitialize"]
